host.id resource provider